--- a/app/src/main/res/layout/layout_page1.xml
+++ b/app/src/main/res/layout/layout_page1.xml
@@ -5,4 +5,11 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="page1"
+        android:textSize="16dp" />
+
 </LinearLayout>
