--- a/app/src/main/res/layout/layout_page3.xml
+++ b/app/src/main/res/layout/layout_page3.xml
@@ -2,7 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/colorPrimaryDark"
+    android:background="@android:color/holo_red_dark"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="page3"
+        android:textSize="16dp" />
 
 </LinearLayout>
